В файл .env добавлена настройки подключения к БД Энергосфера (ip, port и т.д.). В basic.py добавлена функция для вывода инлайн-клавиатуры для работы со счетчиками. В bot.py добавлены функции для обработки вызова инлайн-клавиатуры для работы со счетчиками м обработчики нажатий на кнопки этой клавиатуры. Добавлен файл callback.py - описаны хэндлеры команд инлайн-клавиатуры для работы со счетчиками. В callback_data.py Добавлен и оставлен только класс MetersInfo для хранения выбранной команды инлайн-клавиатуры. В commands.py изменена структура команд бота. В config_reader.py в класс Settings добавлены переменные для хранения настроек подключения к БД Энергосфера. В файле dbconnect.py организовано подключение к БД Энергосфера через sqlalchemy. В файле meters.py описана функция создания инлайн-клавиатуры для работы со счетчиками. В requirements.txt добавлены пакеты pyodbc и sqlalchemy.

--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 BOT_TOKEN = 6618997857:AAGmmJkmwh752-I7aoxXS1R7d5PKIXObwPk
 ADMIN_ID = 1189184041
+DB_SERVER = 172.17.5.102
+DB_PORT = 1433
+DB_BASE = Prosoft_ASKUE
+DB_USER = PyBotUser
+DB_PWD = PyBotPWD
+ODBC_DRIVER = ODBC+Driver+18+for+SQL+Server
+TRUST_SERVER_CERTIFICATE = yes
+TRUSTED_CONNECTION = no
